@@ -1,0 +1,276 @@
+============
+check-health
+============
+
+-------------------
+check system health
+-------------------
+
+:Author: Marius Gedminas <marius@gedmin.as>
+:Date: 2013-07-23
+:Version: 0.2
+:Manual section: 8
+
+
+SYNOPSIS
+========
+
+check-health [-v]
+
+
+DESCRIPTION
+===========
+
+**check-health** is a "poor man's Nagios": a script that performs some
+basic system health checks.  The checks are specified in the configuration
+file ``/etc/pov/check-health``; if that file doesn't exist,
+**check-health** will exit silently without checking anything.
+
+Usually **check-health** is run automatically from cron.  It doesn't emit
+any output and returns exit code 0 if all checks pass.  Any output
+indicates an error, and cron emails it to ``root``.
+
+
+OPTIONS
+=======
+
+-v           Verbose output: show what checks are being performed.
+
+
+AVAILABLE CHECKS
+================
+
+.. documentation generated by running ./extract-documentation.py
+
+checkfs <mountpoint> [<amount>[K/M/G/T]]
+  Check that the filesystem mounted on <mountpoint> has at least <amount>
+  of metric kilo/mega/giga/terabytes free.
+
+  <amount> defaults to 1M
+
+
+  Example: ``checkfs / 100M``
+
+
+checkinodes <mountpoint> [<inodes>]
+  Check that the filesystem mounted on <mountpoint> has at least <inodes>
+  of free inodes left.
+
+  <inodes> defaults to 5000
+
+
+  Example: ``checkinodes /``
+
+
+checknfs <mountpoint>
+  Check that an NFS file system is mounted on <mountpoint>.
+
+  If not, try to mount all NFS filesystems.
+
+  Used as a workaround for an Ubuntu issue where NFS filesystems would fail
+  to mount during boot, but would mount fine afterwards.
+
+  This hasn't been a problem lately.
+
+
+  Example: ``checknfs /home``
+
+
+checkpidfile <filename>
+  Check that the process listed in a given pidfile is running.
+
+
+  Example: ``checkpidfile /var/run/crond.pid``
+
+
+checkpidfiles <filename> ...
+  Check that the process listed in given pidfiles are running.
+
+
+  Example: ``checkpidfiles /var/run/*.pid /var/run/*/*.pid``
+
+
+checkproc <name>
+  Check that a process with a given name is running.
+
+  See also: checkproc_pgrep, checkproc_pgrep_full
+
+
+  Example: ``checkproc crond``
+
+
+checkproc_pgrep <name>
+  Check that a process with a given name is running.
+
+  Uses pgrep instead of pidof, which makes it handle scripts too.
+
+
+checkproc_pgrep_full <cmdline>
+  Check that a process matching a given command line is running.
+
+  Uses pgrep -f instead of pidof, which makes it handle all sorts of things.
+
+
+  Example: ``checkproc_pgrep_full scriptname.py``
+
+  Example: ``checkproc_pgrep_full '/usr/bin/java -jar /usr/share/jenkins/jenkins.war'``
+
+
+checktoomanyproc <name> <limit>
+  Check that fewer than <limit> instances of a given process is running.
+
+
+  Example: ``checktoomanyproc aspell 2``
+
+
+checkram [<free>[M/G/T]]
+  Check that at least <free> metric mega/giga/terabytes of virtual memory are
+  free.
+
+  <free> defaults to 100 megabytes
+
+
+  Example: ``checkram 100M``
+
+
+checkswap [<limit>[M/G/T]]
+  Check if more than <limit> metric mega/giga/terabytes of swap are used.
+
+  <limit> defaults to 100 megabytes
+
+
+  Example: ``checkswap 2G``
+
+
+checkmailq [<limit>]
+  Check if more than <limit> emails are waiting in the outgoing mail queue.
+
+  <limit> defaults to 20
+
+  The check is silently skipped if you don't have any MTA (that provides a
+  mailq command) installed.  Otherwise it probably works only with Postfix.
+
+
+  Example: ``checkmailq 100``
+
+
+checkzopemailq <path> ...
+  Check if any messages older than one minute are present in the outgoing
+  maildir used by zope.sendmail.
+
+  <path> needs to refer to the 'new' subdirectory of the mail queue.
+
+
+  Example: ``checkzopemailq /apps/zopes/*/var/mailqueue/new``
+
+
+checkcups <queuename>
+  Check if the printer is ready.
+
+  Try to enable it if it became disabled.
+
+  Background: I had this issue with CUPS randomly disabling a particular mail
+  queue after it couldn't talk to the printer for a while due to network
+  issues or something.  Manually reenabling the printer got old fast.
+  This hasn't been a problem lately.
+
+
+  Example: ``checkcups cheese``
+
+
+cmpfiles <pathname1> <pathname2>
+  Check if the two files are identical.
+
+  Background: there were some init.d scripts that were writable by a non-root
+  user.  I wanted to do manual inspection before replacing copies of them
+  into /etc/init.d/.
+
+
+  Example: ``cmpfiles /etc/init.d/someservice /home/someservice/initscript``
+
+
+checkaliases
+  Check if /etc/aliases.db is up to date
+
+  Probably works only with Postfix, and only if you use the default database
+  format.
+
+  Background: when you edit /etc/aliases it's so easy to forget to run
+  newaliases.
+
+
+  Example: ``checkaliases``
+
+
+checklilo
+  Check if LILO was run after a kernel update
+
+  Background: if you don't re-run LILO after you update your kernel, your
+  machine will not boot.  We had to use LILO on one server because GRUB
+  completely refused to boot from the Software RAID-1 root partition.
+
+
+  Example: ``checklilo``
+
+.. end of generated chunk
+
+
+EXAMPLES
+========
+
+Example ``/etc/pov/check-health``::
+
+    # Check that processes are running
+    checkproc apache2
+    checkproc cron
+    checkproc sshd
+    checkproc_pgrep tracd
+    checkproc_pgrep_full '/usr/bin/java -jar /usr/share/jenkins/jenkins.war'
+
+    # Check for stale aspell processes (more than 2)
+    checktoomanyproc aspell 2
+
+    # Check for stale pidfiles
+    checkpidfiles /var/run/*.pid /var/run/*/*.pid
+
+    # Check free disk space
+    checkfs /    200M
+    checkfs /var 200M
+
+    # Check free inodes
+    checkinodes /
+    checkinodes /var
+
+    # Check free memory
+    checkram 100M
+
+    # Check excessive swap usage
+    checkswap 2G
+
+    # Check mail queue
+    checkmailq 100
+
+    # Check if /etc/aliases is up to date
+    checkaliases
+
+
+BUGS
+====
+
+**check-health** returns exit code 0 even if some checks failed.  You need
+to watch for stderr to notice problems.
+
+Many checks don't check their arguments for correctness and may fail in
+unexpected ways if you supply a wrong value (or neglect to supply a value
+where one was expected).
+
+
+DESIGN LIMITATIONS
+==================
+
+If cron doesn't work, or email sending doesn't work, **check-health**
+won't be able to report problems.
+
+**check-health** is stateless and as such will keep reporting the same
+error once an hour (assuming default cron configuration) until you fix it.
+
